Revision history for Net-FriendFeed

0.93    Fri Sep 26 01:11:38 MSD 2008
        Support multiple entries fetching via UUIDs.
        Some (compatible) interface and doc cleanups.

0.91	Sat Jul 19 22:06:35 MSD 2008
	Implemet last_error method to report error conditions.

0.9	Sat Jul 19 21:42:40 MSD 2008
	Support new API calls: validate, list_services, fetch_entry,
	(un)delete_entry, (un)hide_entry.

0.85	Wed Jun 25 01:52:03 MSD 2008
	Catch up. Support anonymous entries, 'via' for comments,
	fetching multiple profiles, rooms in profiles.

0.84	Sat May 31 18:10:45 MSD 2008
	Defeat 5.10 compatibility issue which was actually a clash
	between newer base.pm and Test::Deep::isa(). Thanks to
	cpantesters reports.

0.83	Thu May 29 01:17:04 MSD 2008
	Deal with 'unauthorized release' issue by renaming Test::HTTP
	which was taken into Test::MockHTTP and also depend on
	Test::Deep.

0.82	Mon May 26 12:59:26 MSD 2008
	Escape urls for security. Fix more cpantesters report.

0.81	Sun May 25 13:54:12 MSD 2008
	Cpantesters reports arrived. Fix test with local files to use
	FindBin.

0.8	Sun May 25 03:32:06 MSD 2008
	Implement image upload. Implement publisg_link (and other
	POSTed API functions) result value.
	Module is now fully up to spec and CPAN-ready.

0.6	Sun May 25 02:02:23 MSD 2008
	Feeds are now parsed (via JSON.pm 2.0).

0.5	Sun May 25 00:10:43 MSD 2008
	Second release, implements full API with some exceptions:
		* Feeds are not parsed;
		* publish_link does not return anything useful;
		* publish_link does not support uploading images directly to
		  FriendFeed.

0.1	Wed May 21 13:46:30 MSD 2008
	First version, released on an unsuspecting world.
	Support publish_message & publish_link methods.