@@ -1,0 +1,28 @@
+1. New universal publishing method publish() with named args.
+
+2. audio publishing via publish().
+    http://code.google.com/p/friendfeed-api/wiki/ApiDocumentation#Create_New_Entries
+
+4. It appears that we do support this feature but it was not documented.  An example: http://friendfeed.com/api/feed/user?emails=bgolub@benjamingolub.com
+5. 
+   1. http://beta.friendfeed.com/api/user/nickname/profile - now includes list information if you are currently authenticated as the profile you are requesting.
+   2. http://beta.friendfeed.com/api/list/nickname/profile - request information about a list including the rooms and users in it.
+   3. http://beta.friendfeed.com/api/feed/list/nickname - request a list feed.  Like other feeds this method supports filtering on service and paging with start/num arguments.
+
+7. 
+It hasn't been documented but you can use: http://friendfeed.com/NICKNAME/picture.  You can also specify the size: http://friendfeed.com/NICKNAME/picture?size=SIZE (where size can be "small", "medium", or "large")
+8. 
+You can now subscribe and unsubscribe from users and rooms via the
+FriendFeed API.  The new API calls are:
+
+Subscribe:
+http://friendfeed.com/api/user/NICKNAME/subscribe
+http://friendfeed.com/api/room/NICKNAME/subscribe
+
+Unsubscribe:
+http://friendfeed.com/api/user/NICKNAME/subscribe?unsubscribe=1
+http://friendfeed.com/api/room/NICKNAME/subscribe?unsubscribe=1
+
+These methods require an API key.  An API key is a private key that
+developers can obtain by sending an email to api@friendfeed.com (this
+is different from the via argument you are used to sending).
