@@ -3,7 +3,7 @@
 use warnings;
 use strict;
 
-use Test::More tests => 36;
+use Test::More tests => 38;
 use Test::NoWarnings;
 use Test::Deep;
 use Test::MockHTTP;
@@ -32,7 +32,7 @@ is($frf->return_feeds_as(), 'structure', 'default return_feeds_as');
 can_ok($frf, qw/fetch_public_feed fetch_user_feed
 fetch_user_comments_feed fetch_user_likes_feed
 fetch_user_discussion_feed fetch_multi_user_feed fetch_home_feed search
-fetch_room_feed/);
+fetch_room_feed fetch_user_friends_feed/);
 
 my $feed_rv;
 
@@ -171,3 +171,13 @@ http_cmp(sub { $frf->fetch_multi_user_feed(['kka/pp', 'mi&hun']) },
         ),
     ]
 ), 'multi user unsafe data');
+
+ok(
+http_cmp(sub { $frf->fetch_user_friends_feed('kkapp') },
+    [
+        uri => methods(
+            path => re('feed/user/kkapp/friends$'),
+        ),
+    ]
+), 'friends feed');
+
